fix: the gradient for the image overlapped the text

--- a/src/components/blocks/home-intro/home-intro.module.scss
+++ b/src/components/blocks/home-intro/home-intro.module.scss
@@ -19,4 +19,5 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  z-index: 1;
 }
